# MindFace-Lite

./: .gitignore  LICENSE  PROJECT_DEMO.md  README.md  RUN_ORDER.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements-rknn.txt  requirements.txt
.github/workflows/: ci.yml
assets/avatar/: stage1_6_static_face.prompt.txt
configs/: README.md  benchmark.yaml  benchmark_pruned.yaml  better_visual_demo.yaml  export_grid_onnx.yaml  export_onnx.yaml  expressive_avatar_demo.yaml  grid_video_landmarks.yaml  infer_onnx.yaml  mic_stream.yaml  prepare_grid.yaml  prepare_grid_landmark.yaml  real_tts.yaml  rknn_deploy.yaml  rule_demo.yaml  train_grid_debug_mlp.yaml  train_grid_landmark_mlp.yaml  train_grid_mlp.yaml  train_lstm.yaml  train_mlp.yaml  train_tcn.yaml  train_transformer.yaml  tts_demo.yaml
configs/benchmarks/: backend-consistency.yaml  benchmark-grid-quantized-onnx.yaml  benchmark-quantized-onnx.yaml
configs/datasets/: grid-video-landmarks.yaml  prepare-grid.yaml  synthetic-dataset.yaml
configs/deployment/: device-tree-uboot.yaml
configs/inference/: infer-pytorch.yaml
configs/optimization/: prune-finetune.yaml  quantize-grid-onnx.yaml  quantize-onnx.yaml
configs/realtime/: real-tts.yaml  realtime-rule.yaml  tts-demo.yaml
configs/training/: train-grid-debug-mlp.yaml  train-grid-landmark-mlp.yaml  train-grid-mlp.yaml  train-lstm.yaml  train-mlp.yaml  train-tcn.yaml  train-transformer.yaml
cpp/: CMakeLists.txt  CMakePresets.json
cpp/apps/: onnxruntime_cpp_demo.cpp  queue_demo.cpp  serial_sender.cpp  udp_sender.cpp
cpp/include/mindface/: bounded_queue.hpp  mouth_params.hpp  runtime.hpp
cpp/src/: queue_demo.cpp  runtime.cpp  udp_sender.cpp
cpp/tests/: test_bounded_queue.cpp
docs/: 00_rule_demo.md  01_training.md  02_deployment.md  03_realtime_engineering.md  04_cpp_control.md  05_rk3588_rknn_plan.md  06_debugging.md  07_interview_notes.md  08_performance_report.md  09_grid_preprocessing.md  10_quantization_pruning.md  11_landmark_tts_mic_rknn.md  README.md  file-disposition-review.md  grid-landmark-training-report.md  progress.md
docs/features/: README.md  backend-consistency.md  better-visual-renderer.md  engineering-contracts.md  environment-installer.md  unified-cli.md  (+7 more)
models/: README.md
scripts/: 00_generate_test_audio.py  01_5_better_visual_demo.py  01_6_expressive_avatar_demo.py  01_rule_mouth_demo.py  02_generate_synthetic_dataset.py  03_train_mlp.py  03_train_model.py  04_infer_pytorch.py  05_export_onnx.py  06_infer_onnx.py  07_realtime_rule_demo.py  08_benchmark.py  09_prepare_grid_dataset.py  10_quantize_onnx.py  11_benchmark_quantized_onnx.py  12_prune_finetune.py  13_benchmark_pruned.py  14_extract_grid_video_landmarks.py  15_verify_basic_outputs.py  16_prepare_grid_landmark_dataset.py  17_compare_inference_backends.py  19_tts_generate_wav.py  20_tts_mouth_demo.py  21_real_tts_generate_wav.py  22_real_tts_mouth_demo.py  23_mic_stream_rule_demo.py  24_rknn_convert_and_infer.py  25_device_tree_uboot_check.py  99_health_check.py  _compat.py  run_00_basic_pipeline.py
tests/: test_audio_features.py  test_backend_consistency.py  test_backends.py  test_cli.py  test_config_paths.py  test_config_schema.py  test_dataset.py  test_dataset_splitting.py  test_environment_manager.py  test_extracted_services.py  test_extracted_workflows.py  test_grid_supervised.py  test_health_dependencies.py  test_model_bundle.py  test_pipeline_control.py  test_realtime_queue.py  test_static_avatar_warper.py  test_terminal_ui.py  test_training_resume.py
(+81 files in other folders)
