[project]
name = "mindface-lite"
version = "1.0.0"
description = "MindFace-Lite: lightweight realtime speech-driven digital human mouth animation system"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
