cmake_minimum_required(VERSION 3.16)
project(MindFaceLiteCpp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(queue_demo src/queue_demo.cpp)
add_executable(udp_sender src/udp_sender.cpp)
add_executable(serial_sender src/serial_sender.cpp)

option(BUILD_ONNXRUNTIME_DEMO "Build ONNXRuntime C++ demo" OFF)
set(ONNXRUNTIME_DIR "" CACHE PATH "Path to ONNXRuntime C++ SDK")
if(BUILD_ONNXRUNTIME_DEMO)
    if(NOT ONNXRUNTIME_DIR)
        message(FATAL_ERROR "Please set -DONNXRUNTIME_DIR=/path/to/onnxruntime")
    endif()
    add_executable(onnxruntime_cpp_demo src/onnxruntime_cpp_demo.cpp)
    target_include_directories(onnxruntime_cpp_demo PRIVATE ${ONNXRUNTIME_DIR}/include)
    target_link_directories(onnxruntime_cpp_demo PRIVATE ${ONNXRUNTIME_DIR}/lib)
    target_link_libraries(onnxruntime_cpp_demo onnxruntime)
endif()

if(WIN32)
    target_link_libraries(udp_sender ws2_32)
endif()
