cmake_minimum_required(VERSION 3.16)
project(MindFaceLiteCpp LANGUAGES CXX)

include(CTest)
find_package(Threads REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(mindface_runtime STATIC src/runtime.cpp)
target_include_directories(mindface_runtime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(mindface_runtime PUBLIC Threads::Threads)

add_executable(queue_demo apps/queue_demo.cpp)
add_executable(udp_sender apps/udp_sender.cpp)
add_executable(serial_sender apps/serial_sender.cpp)
target_link_libraries(queue_demo PRIVATE mindface_runtime)
target_link_libraries(udp_sender PRIVATE mindface_runtime)
target_link_libraries(serial_sender PRIVATE mindface_runtime)

option(BUILD_ONNXRUNTIME_DEMO "Build ONNXRuntime C++ demo" OFF)
set(ONNXRUNTIME_DIR "" CACHE PATH "Path to ONNXRuntime C++ SDK")
if(BUILD_ONNXRUNTIME_DEMO)
    if(NOT ONNXRUNTIME_DIR)
        message(FATAL_ERROR "Please set -DONNXRUNTIME_DIR=/path/to/onnxruntime")
    endif()
    add_executable(onnxruntime_cpp_demo apps/onnxruntime_cpp_demo.cpp)
    target_include_directories(onnxruntime_cpp_demo PRIVATE ${ONNXRUNTIME_DIR}/include)
    target_link_directories(onnxruntime_cpp_demo PRIVATE ${ONNXRUNTIME_DIR}/lib)
    target_link_libraries(onnxruntime_cpp_demo PRIVATE mindface_runtime onnxruntime)
endif()

if(WIN32)
    target_link_libraries(udp_sender PRIVATE ws2_32)
endif()

if(BUILD_TESTING)
    add_executable(mindface_queue_tests tests/test_bounded_queue.cpp)
    target_link_libraries(mindface_queue_tests PRIVATE mindface_runtime)
    add_test(NAME mindface_queue_tests COMMAND mindface_queue_tests)
endif()
